tests/NormalTests/paczka1/fuzzy1/35573757.err
Error in line 28: 2mGLd A630 78,4
Error in line 33: GImQy9WV9k S638 89,6
Error in line 39: 2mGLd A883 79,30
